--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,226 @@
-python-dotenv==1.0.1
-streamlit==1.37.0
-langchain-community==0.2.10
-langchain-text-splitters==0.2.2
-langchain-groq==0.1.9
-unstructured==0.10.30
-unstructured[pdf]==0.10.30
-faiss-cpu==1.7.2
-transformers==4.43.3
-sentence-transformers==3.0.1
-nltk==3.8.1
+aiodns==3.1.1
+aiohttp==3.9.1
+aiosignal==1.3.1
+anyio==4.4.0
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.10.3
+bcc==0.29.1
+bcrypt==3.2.2
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.7.0
+Brlapi==0.8.5
+Brotli==1.1.0
+certifi==2023.11.17
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.4.0
+click==8.1.6
+cloud-init==24.4.1
+colorama==0.4.6
+comm==0.2.2
+command-not-found==0.3
+configobj==5.0.8
+contourpy==1.3.0
+cryptography==41.0.7
+cssselect==1.2.0
+cupshelpers==1.0
+cycler==0.12.1
+dbus-python==1.3.2
+debugpy==1.8.2
+decorator==5.1.1
+defer==1.0.6
+defusedxml==0.7.1
+distlib==0.3.8
+distro==1.9.0
+distro-info==1.7+build1
+duplicity==2.1.4
+executing==2.0.1
+fasteners==0.18
+fastjsonschema==2.20.0
+filelock==3.15.4
+fonttools==4.53.1
+fqdn==1.5.1
+frozenlist==1.4.0
+fs==2.4.16
+GDAL==3.8.4
+greenlet==3.0.3
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.5
+httplib2==0.20.4
+httpx==0.27.0
+idna==3.6
+importlib-metadata==4.12.0
+ipykernel==6.29.5
+ipython==8.26.0
+ipywidgets==8.1.3
+isoduration==20.11.0
+jaraco.classes==3.2.1
+jedi==0.19.1
+jeepney==0.8.0
+Jinja2==3.1.2
+joblib==1.4.2
+json5==0.9.25
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+jupyterlab_widgets==3.0.11
+keyring==24.3.1
+kiwisolver==1.4.7
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+louis==3.29.0
+lxml==5.2.1
+lz4==4.0.2+dfsg
+Mako==1.3.2.dev0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+monotonic==1.6
+more-itertools==10.2.0
+mpmath==0.0.0
+msgpack==1.0.3
+multidict==6.0.4
+mutagen==1.47.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+netaddr==0.8.0
+netifaces==0.11.0
+nltk==3.9.1
+notebook==7.2.1
+notebook_shim==0.2.4
+numpy==2.1.1
+oauthlib==3.2.2
+olefile==0.46
+overrides==7.7.0
+OWSLib==0.29.3
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
+paramiko==2.12.0
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.2
+plotly==5.15.0
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+proton-core==0.4.0
+proton-keyring-linux==0.2.0
+proton-vpn-api-core==0.42.4
+proton-vpn-gtk-app==4.9.6
+proton-vpn-network-manager==0.12.13
+psutil==6.0.0
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycairo==1.25.1
+pycares==4.4.0
+pycparser==2.22
+pycryptodomex==3.21.0
+pycups==2.0.1
+Pygments==2.17.2
+PyGObject==3.48.2
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pynvim==0.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyproj==3.6.1
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+pyrsistent==0.20.0
+pyserial==3.5
+python-apt==2.7.7+ubuntu4
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+python-gnupg==0.5.2
+python-json-logger==2.0.7
+pytz==2024.1
+pyxdg==0.28
+PyYAML==6.0.1
+pyzmq==26.0.3
+QScintilla==2.14.1
+qtconsole==5.5.2
+QtPy==2.4.1
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.19.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+SecretStorage==3.3.3
+Send2Trash==1.8.3
+sentry-sdk==1.39.2
+setuptools==68.1.2
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+ssh-import-id==5.11
+stack-data==0.6.3
+sympy==1.12
+systemd-python==235
+tenacity==8.2.3
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.10.0
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufoLib2==0.16.0
+ufw==0.36.2
+unattended-upgrades==0.1
+unicodedata2==15.1.0
+uri-template==1.3.0
+urllib3==2.0.7
+usb-creator==0.3.16
+virtualenv==20.26.3
+wadllib==1.3.6
+wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==13.1
+wheel==0.42.0
+widgetsnbextension==4.0.11
+xdg==5
+xkit==0.0.0
+yarl==1.8.2
+yt-dlp==2024.10.22
+zipp==1.0.0
